@@ -19,6 +19,7 @@ version 1.1-rc0 ..-..-2012
 . [FIX] CCTouchDispatcher: fixed crash after showing UIAlertView (issue #1279)
 . [FIX] CCGrabber: added log message to warn that grabber doesn't support transparent parts with a color buffer of RGB565
 . [FIX] Compiler: fixed unrecognised clang pragmas so cocos can still be compiled with LLVM version < 2.0. 
+. [FIX-MAC] CCDirectorMac: convertToLogicalCoordinates compensates for viewport offset when a custom projection is set 
 
 version 1.1-beta2b 14-Mar-2012
 . [FIX] CCUtils: missing method declaration
